--- a/src/Portfolio/index.css
+++ b/src/Portfolio/index.css
@@ -8,9 +8,11 @@
 h1{
     font-size: 60px;
     /* margin-top: 20%; */
+    margin-left: 30%;
 }
 h2{
     font-size: 30px;
+    margin-left: 30%;
 }
 
 
@@ -18,7 +20,7 @@ h2{
 .about{
     display: contents;
     /* display: flex; */
-    text-align: center;
+    /* text-align: center; */
     justify-content: center;
     gap: 10%;
     width: 50%;
@@ -26,6 +28,12 @@ h2{
 }
 .about p{
     font-size: 25px;
+    width: 30%;
+    margin-left: 33%;
+
+
+
+
 
 }
 .jango{
@@ -36,16 +44,33 @@ h2{
   
 }
 .skills{
-    display: contents;
+    /* display: contents;
     justify-content: center;
     text-align: center;
-    /* width: 20%; */
+    width: 20%; */
 
 }
 .skills p{
-    font-size: 30px;
+    font-size: 24px;
+    width: 100%;
 }
+.skills h3{
+    margin-right: 20%;
 
+
+}
+.mooo{
+    height: 400px;
+    width: 400px;
+    border-radius: 100%;
+}
+.skillsimage{
+    justify-content: center;
+    display: flex;
+    gap: 10%;
+    
+   
+}
 
 @media (min-width:280px) and (max-width:360px){
     .introduction{
@@ -89,7 +114,7 @@ h2{
         display: contents;
         justify-content: center;
         text-align: center;
-        /* width: 20%; */
+        width: 20%;
     
     }
     .skills p{
